[tool.poetry]
name = "linebotapi"
version = "0.1.0"
description = ""
authors = ["test <test@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aenum = "3.1.15"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.11.0"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
attrs = "24.2.0"
blinker = "1.9.0"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
click = "8.1.7"
colorama = "0.4.6"
deprecated = "1.2.14"
dnspython = "2.7.0"
fastapi = {extras = ["all"], version = "^0.115.5"}
flask = "3.1.0"
frozenlist = "1.5.0"
future = "1.0.0"
h11 = "0.14.0"
idna = "3.10"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
line-bot-sdk = "3.14.2"
markupsafe = "3.0.2"
multidict = "6.1.0"
propcache = "0.2.0"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pymongo = "4.10.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
requests = "2.32.3"
six = "1.16.0"
sniffio = "1.3.1"
starlette = "0.41.2"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
uvicorn = "0.32.0"
werkzeug = "3.1.3"
wrapt = "1.16.0"
yarl = "1.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
